working template node